Navbar layout shift fixed

--- a/css/scss/components/_dropdown.scss
+++ b/css/scss/components/_dropdown.scss
@@ -30,11 +30,11 @@
     left: 41px;
   }
   &#services {
-    left: 166px;
+    left: 184px;
     /* min-width: 400px;  */
   }
   &#contact {
-    left: 380px;
+    left: 472px;
     /* min-width: 400px; */
   }
   .dropdown-item-list {
