--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 body {
   box-sizing: border-box;
@@ -78,75 +79,7 @@ body {
   font-size: 16px;
   max-width: 30%;
 }
-/* Side menu */
-.side-menu-design {
-  background-color: hsla(50deg, 83%, 74%, 0.85);
-  backdrop-filter: blur(10px);
-}
-.side-menu-position {
-  position: absolute;
-  top: 0;
-  bottom: 0%;
-  left: 0;
-  right: 0;
-  /* inset: 0px; Should I use inset here instead of top, right, bottom, left? */
-  width: 100%;
-  /* the height doesnt cover the whole page vw, wh or percentage? */
-  height: 100%;
-  z-index: 6;
-  opacity: 0;
-  transform: translateX(-100%);
-  /* there are no transition fading out */
-}
-.side-menu-header {
-  display: flex;
-  justify-content: space-between;
-  margin: 20px;
-  align-items: center;
-}
-.side-menu-close-button {
-  width: 30px;
-  cursor: pointer;
-}
-.side-menu-content {
-  opacity: 0;
-  transform: translateX(-110%);
-  transition: all 500ms ease-in-out 0.5s;
-}
-.side-menu-content a {
-  text-decoration: none;
-  display: block;
-  font-size: 1.7rem;
-  font-weight: 500;
-  color: #1f2421;
-  padding: 20px 0;
-}
-.mobileNav-top {
-  padding-left: 60px;
-}
-.mobileNav-bottom {
-  padding: 10px 20px;
-}
-.personal-account:hover {
-  color: #5b8e7d;
-}
-.mobileNav-top a:hover {
-  color: #5b8e7d;
-}
-.HH-button.sign-up {
-  color: #fcf7ee;
-  padding: 10px 10px 7px 10px;
-  border-radius: 40px;
-  max-width: 300px;
-}
-.side-menu-content hr {
-  border: 1px solid #f4a259;
-}
-.show-menu {
-  opacity: 1;
-  transform: translateX(0%);
-  transition: opacity 500ms ease-in-out 0s;
-}
+
 /* Footer */
 .newsletter-signup {
   padding: 30px 10px;
